testsuite/bsc.typechecker/typeclasses/ATFWrongArityBSV.bsv.bsc-out.expected
checking package dependencies
compiling ATFWrongArityBSV.bsv
Error: "ATFWrongArityBSV.bsv", line 19, column 10: (T0025)
  The type `Elem' is applied to too few arguments.
